--- a/app_user/src/main/resources/application-dev.yml
+++ b/app_user/src/main/resources/application-dev.yml
@@ -5,64 +5,73 @@ server:
 spring:
 #================================================阿里数据库连接 ================================================#
   datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/sm_shiro
-    username: root
-    password: lovesen123
-    # 初始化大小，最小，最大
-    initialSize: 5
-    minIdle: 5
-    maxActive: 20
-    # 配置获取连接等待超时的时间
-    maxWait: 60000
-    # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-    timeBetweenEvictionRunsMillis: 60000
-    # 配置一个连接在池中最小生存的时间，单位是毫秒
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: select 'x'
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    # 打开PSCache，并且指定每个连接上PSCache的大小
-    poolPreparedStatements: true
-    maxPoolPreparedStatementPerConnectionSize: 20
-    # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-    filters: stat,wall,log4j2
-    #通过connectProperties属性来打开mergeSql功能；慢SQL记录
-    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+    common:
+      type: com.alibaba.druid.pool.DruidDataSource
+      driver-class-name: com.mysql.jdbc.Driver
+      # 初始化大小，最小，最大
+      initialSize: 5
+      minIdle: 5
+      maxActive: 20
+      # 配置获取连接等待超时的时间
+      maxWait: 60000
+      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+      timeBetweenEvictionRunsMillis: 60000
+      # 配置一个连接在池中最小生存的时间，单位是毫秒
+      minEvictableIdleTimeMillis: 300000
+      validationQuery: select 'x'
+      testWhileIdle: true
+      testOnBorrow: false
+      testOnReturn: false
+      # 打开PSCache，并且指定每个连接上PSCache的大小
+      poolPreparedStatements: true
+      maxPoolPreparedStatementPerConnectionSize: 20
+      # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+    master:
+      url: jdbc:mysql://localhost:3306/sm_shiro
+      username: root
+      password: lovesen123
+    slave:
+      url: jdbc:mysql://localhost:3306/sm_shiro_slave
+      username: root
+      password: lovesen123
 #========================================== Mybatis-Plus ======================================================#
 
-mybatis-plus:
+mybatis:
   mapper-locations: classpath:/mybatis/*Mapper.xml
-  #实体扫描，多个package用逗号或者分号分隔
-  typeAliasesPackage: com.wangsen.user
-#  typeEnumsPackage: com.wangsen.learn1.enums
-  global-config:
-    #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
-    id-type: 2
-    #字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
-    field-strategy: 2
-    #驼峰下划线转换
-    db-column-underline: true
-    #刷新mapper 调试神器
-    refresh-mapper: true
-    #数据库大写下划线转换
-    #capital-mode: true
-    #序列接口实现类配置,不在推荐使用此方式进行配置,请使用自定义bean注入
-    key-generator: com.baomidou.mybatisplus.incrementer.H2KeyGenerator
-    #逻辑删除配置（下面3个配置）
-    logic-delete-value: 0
-    logic-not-delete-value: 1
-    #逻辑删除Sql注入器
-    sql-injector: com.baomidou.mybatisplus.mapper.LogicSqlInjector
-    #自定义填充策略接口实现,不在推荐使用此方式进行配置,请使用自定义bean注入
-    meta-object-handler: com.wangsen.user.config.mybatisplus.MyMetaObjectHandler
-    #自定义SQL注入器
-    #sql-injector: com.baomidou.springboot.xxx
-    # SQL 解析缓存，开启后多租户 @SqlParser 注解生效
-    sql-parser-cache: true
-  configuration:
-    map-underscore-to-camel-case: true
-    cache-enabled: false
+  type-aliases-package: com.wangsen.user
+
+#
+#mybatis-plus:
+#  mapper-locations: classpath:/mybatis/*Mapper.xml
+#  #实体扫描，多个package用逗号或者分号分隔
+#  typeAliasesPackage: com.wangsen.user
+##  typeEnumsPackage: com.wangsen.learn1.enums
+#  global-config:
+#    #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
+#    id-type: 2
+#    #字段策略 0:"忽略判断",1:"非 NULL 判断"),2:"非空判断"
+#    field-strategy: 2
+#    #驼峰下划线转换
+#    db-column-underline: true
+#    #刷新mapper 调试神器
+#    refresh-mapper: true
+#    #数据库大写下划线转换
+#    #capital-mode: true
+#    #序列接口实现类配置,不在推荐使用此方式进行配置,请使用自定义bean注入
+#    key-generator: com.baomidou.mybatisplus.incrementer.H2KeyGenerator
+#    #逻辑删除配置（下面3个配置）
+#    logic-delete-value: 0
+#    logic-not-delete-value: 1
+#    #逻辑删除Sql注入器
+#    sql-injector: com.baomidou.mybatisplus.mapper.LogicSqlInjector
+#    #自定义填充策略接口实现,不在推荐使用此方式进行配置,请使用自定义bean注入
+#    meta-object-handler: com.wangsen.user.config.mybatisplus.MyMetaObjectHandler
+#    #自定义SQL注入器
+#    #sql-injector: com.baomidou.springboot.xxx
+#    # SQL 解析缓存，开启后多租户 @SqlParser 注解生效
+#    sql-parser-cache: true
+#  configuration:
+#    map-underscore-to-camel-case: true
+#    cache-enabled: false
+#
 
