--- a/app_user/src/main/resources/application-dev.yml
+++ b/app_user/src/main/resources/application-dev.yml
@@ -6,7 +6,6 @@ spring:
 #================================================阿里数据库连接 ================================================#
   datasource:
     common:
-      type: com.alibaba.druid.pool.DruidDataSource
       driver-class-name: com.mysql.jdbc.Driver
       # 初始化大小，最小，最大
       initialSize: 5
@@ -34,11 +33,21 @@ spring:
       url: jdbc:mysql://localhost:3306/sm_shiro_slave
       username: root
       password: lovesen123
+#============================================= rabbitMq ======================================================#
+  rabbitmq:
+    username: guest
+    password: guest
+    addresses: ip1:port1,ip2:port2,ip3:port3
+
 #========================================== Mybatis-Plus ======================================================#
 
 mybatis:
   mapper-locations: classpath:/mybatis/*Mapper.xml
   type-aliases-package: com.wangsen.user
+
+
+
+
 
 #
 #mybatis-plus:
